# resume_extraction

./: .gitignore  README.md  action_items.md  config.ini  important_ideas.md  landing_apis.py  main.py  pyproject.toml  requirements.txt  service.py  tech_stack.md  test_evaluation_agent.py
.github/workflows/: branch_name.yml
agents/: evaluation.py
data_models/: evaluation.py  extraction.py  feature_options.py  recommendation.py  upload.py
utils/: config.py  external_resources.py  extract_pdf.py
