[project]
name = "resume-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "boto3>=1.40.10",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langgraph>=0.6.5",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
